force-app/main/default/objects/vlocity_ins__PricingPlanStep__c/vlocity_ins__PricingPlanStep__c.object-meta.xml
<CustomObject>
    <description>Defines steps in a Vlocity Pricing Plan which defines the pricing methods called by the Vlocity CPQ PricingPlanService implementation.</description>
    <label>Pricing Plan Step</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Plan Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>