force-app/main/default/objects/vlocity_ins__PricingPlanStep__c/fields/vlocity_ins__MethodName__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__MethodName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Method Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>