force-app/main/default/objects/vlocity_ins__PricingPlanStep__c/fields/vlocity_ins__Parameters__c.field-meta.xml
<CustomField>
    <fullName>vlocity_ins__Parameters__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>